--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      src="https://kit.fontawesome.com/d1bc534483.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--  font-linked: Noto Sans JP, Goldman, Sacramento, Roboto    -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goldman&family=Noto+Sans+JP:wght@300&family=Roboto:wght@300&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap 4.4.1 -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -25,7 +36,7 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
-
+    <link rel="stylesheet" href="./styles.css" />
     <title>Marvel Comic Store</title>
   </head>
   <body>
