--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,16 @@
       href="https://fonts.googleapis.com/css2?family=Goldman&family=Noto+Sans+JP:wght@300&family=Roboto:wght@300&family=Sacramento&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      src="https://unpkg.com/@material-ui/core@latest/umd/material-ui.development.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <!-- Bootstrap 4.4.1 -->
     <link
       rel="stylesheet"
